evenframe_core/tests/snapshots/snapshot_tests__effect__effect_enum_externally_tagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const Status = Schema.Union(Schema.Literal("Active"), Schema.Literal("Inactive"), Schema.Literal("Pending"), Schema.Literal("Suspended")).annotations({ identifier: `Status` });

export type StatusEncoded = "Active" | "Inactive" | "Pending" | "Suspended";


export type StatusType = typeof Status.Type;
