evenframe_core/tests/snapshots/snapshot_tests__effect__effect_enum_untagged.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export const Value = Schema.Union(Schema.String, Schema.Number, Schema.Boolean, Schema.Null).annotations({ identifier: `Value` });

export type ValueEncoded = string | number | boolean | null;


export type ValueType = typeof Value.Type;
