evenframe_core/tests/snapshots/snapshot_tests__effect__effect_enum_with_data.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export class InlineData extends Schema.Class<InlineData>("InlineData")( { 
  label: Schema.propertySignature(Schema.String).annotations({ missingMessage: () => `'Label' is required` }),
  value: Schema.propertySignature(Schema.Number).annotations({ missingMessage: () => `'Value' is required` })
}) {[key: string]: unknown}

export class Coordinates extends Schema.Class<Coordinates>("Coordinates")( { 
  lat: Schema.propertySignature(Schema.Number).annotations({ missingMessage: () => `'Lat' is required` }),
  lng: Schema.propertySignature(Schema.Number).annotations({ missingMessage: () => `'Lng' is required` })
}) {[key: string]: unknown}

export const Location = Schema.Union(Schema.Struct({ Address: Schema.String }), Schema.Struct({ Coords: Coordinates }), Schema.Struct({ Inline: InlineData }), Schema.Literal("Unknown")).annotations({ identifier: `Location` });

export interface InlineDataEncoded {
  readonly label: string;
  readonly value: number;
}

export interface CoordinatesEncoded {
  readonly lat: number;
  readonly lng: number;
}

export type LocationEncoded = { readonly Address: string } | { readonly Coords: CoordinatesEncoded } | { readonly Inline: InlineDataEncoded } | "Unknown";


export type InlineDataType = typeof InlineData.Type;
export type CoordinatesType = typeof Coordinates.Type;
export type LocationType = typeof Location.Type;
