evenframe_core/tests/snapshots/snapshot_tests__effect__effect_enum_with_data_inline.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export class Coordinates extends Schema.Class<Coordinates>("Coordinates")( { 
  lat: Schema.propertySignature(Schema.Number).annotations({ missingMessage: () => `'Lat' is required` }),
  lng: Schema.propertySignature(Schema.Number).annotations({ missingMessage: () => `'Lng' is required` })
}) {[key: string]: unknown}

export const Location = Schema.Union(Schema.Struct({ Address: Schema.String.pipe(Schema.nonEmptyString({ message: () => `Please enter a value` })) }), Schema.Struct({ Coords: Coordinates }), Schema.Struct({ Inline: Schema.Struct({ label: Schema.propertySignature(Schema.String.pipe(Schema.nonEmptyString({ message: () => `Please enter a value` }))).annotations({ missingMessage: () => `'Label' is required` }), value: Schema.propertySignature(Schema.Number).annotations({ missingMessage: () => `'Value' is required` }) }) }), Schema.Literal("Unknown")).annotations({ identifier: `Location` });

export interface CoordinatesEncoded {
  readonly lat: number;
  readonly lng: number;
}

export type LocationEncoded = { readonly Address: string } | { readonly Coords: CoordinatesEncoded } | { readonly Inline: { readonly label: string; readonly value: number; } } | "Unknown";


export type CoordinatesType = typeof Coordinates.Type;
export type LocationType = typeof Location.Type;
