evenframe_core/tests/snapshots/snapshot_tests__effect__effect_foreign_types.snap
---
source: evenframe_core/tests/snapshot_tests.rs
expression: output
---
export class Appointment extends Schema.Class<Appointment>("Appointment")( { 
  id: Schema.propertySignature(Schema.String).annotations({ missingMessage: () => `'Id' is required` }),
  title: Schema.propertySignature(Schema.String).annotations({ missingMessage: () => `'Title' is required` }),
  scheduledAt: Schema.propertySignature(Schema.String).annotations({ missingMessage: () => `'Scheduled At' is required` }),
  duration: Schema.propertySignature(Schema.Number).annotations({ missingMessage: () => `'Duration' is required` }),
  cancelledAt: Schema.OptionFromNullishOr(Schema.String, null)
}) {[key: string]: unknown}


export interface AppointmentEncoded {
  readonly id: string;
  readonly title: string;
  readonly scheduledAt: string;
  readonly duration: number;
  readonly cancelledAt: string | null | undefined;
}


export type AppointmentType = typeof Appointment.Type;
